ARROW-13676: [C++][Parquet] Avoid potential invalid access.